force-app/main/default/objects/General_Query__mdt/General_Query__mdt.object-meta.xml
<CustomObject>
    <label>General Query</label>
    <pluralLabel>General Query</pluralLabel>
</CustomObject>