force-app/main/default/objects/General_Query__mdt/fields/revertReimVal__c.field-meta.xml
<CustomField>
    <fullName>revertReimVal__c</fullName>
    <label>revertReimVal</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>