force-app/main/default/objects/General_Query__mdt/fields/savePrevMonthVal__c.field-meta.xml
<CustomField>
    <fullName>savePrevMonthVal__c</fullName>
    <label>savePrevMonthVal</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>