force-app/main/default/objects/General_Query__mdt/fields/Test_Query__c.field-meta.xml
<CustomField>
    <fullName>Test_Query__c</fullName>
    <label>Test Query</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>